# package-support_ticket

./: CLAUDE.md  LICENSE  MANIFEST.in  README.md  __init__.py  actions.py  api.py  constants.py  permissions.py  pyproject.toml  serializers.py  services.py  setup.cfg
docs/: TECHNICAL.md  support-requests.md
forms/: __init__.py  bulk.py  fields.py  types.py
models/: __init__.py  attachment.py  ticket.py
reports/: ticket_types_export.py
settings/: support_ticket_settings.py
support_ticket/: actions.py  admin.py  api.py  apps.py  constants.py  permissions.py  serializers.py  services.py  signals.py
support_ticket/forms/: bulk.py  fields.py  types.py
support_ticket/migrations/: 0001_initial.py  0002_type_notify_and_requires_attachment.py  0003_add_ticket_attachment.py  0004_migrate_media_to_attachment.py  0005_drop_media_fields.py  0006_fix_ticket_dates_and_status.py  0007_migrate_legacy_settings_key.py  0008_alter_ticketattachment_media.py
support_ticket/models/: __init__.py  attachment.py  ticket.py
support_ticket/reports/: ticket_types_export.py
support_ticket/settings/: support_ticket_settings.py
support_ticket/tests/: test_api.py  test_bulk_actions.py  test_detail_views.py  test_models.py  test_reports.py  test_settings.py  test_signals.py  test_submission.py  test_summary.py  test_wiring.py
support_ticket/urls/: api.py  ce.py  highschool_admin.py  instructor.py  student.py
support_ticket/views/: highschool_admins.py  instructors.py  students.py  (+2 more)
views/: __init__.py  highschool_admins.py  instructors.py  students.py  tickets.py  types.py
(+13 files in other folders)
