[metadata]
name = myce-support-ticket
version = 0.0.1
description = MyCE - Support Tickets
url = https://github.com/Canusia/package-support_ticket
author = Avi Kadaji
author_email = avi@canusia.com

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2

[options.packages.find]
exclude =
    tests*
    forms
    forms.*
    models
    models.*
    views
    views.*
